# LexPilot

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml
.claude/: settings.local.json
agents/: compliance_agent.py  contract_agent.py  models.py  orchestrator.py  precedent_agent.py  risk_agent.py
agents/guardrails/: input_guardrails.py  output_guardrails.py
agents/tools/: compliance_tools.py  retrieval_tools.py
api/: main.py  provider.py  schemas.py
api/middleware/: cors.py
api/routes/: chat.py  feedback.py  health.py  query.py
chunking/: models.py  semantic_chunker.py
citation/: extractor.py  index.py  verifier.py
compliance/: dpdp_scanner.py  dpdp_sections.py  models.py
config/: config.py
core/: confidence.py  context_manager.py  memory.py  model_router.py
docker/: init.sql
evaluation/: adversarial.py  benchmark.py  eval_suite.py  llm_judge.py  ragas_eval.py
evaluation/eval_dataset/: financial_qa_200.json
findocs/: docker-compose.yml
findocs/.github/workflows/: eval_gate.yml
findocs/api/: schemas.py
findocs/api/routes/: feedback.py
findocs/config/: __init__.py
findocs/evaluation/: ci_gate.py  eval_dataset.py
findocs/finetuning/: dataset_generator.py  push_to_hub.py  training_config.yaml
findocs/ingestion/: models.py
findocs/ingestion/parsers/: chart_extractor.py  text_extractor.py
findocs/ingestion/scrapers/: nse_scraper.py
findocs/monitoring/: drift_detector.py  feedback_collector.py
findocs/pipeline/: airflow_dag.py
findocs/processing/: metadata_enricher.py
findocs/retrieval/: hybrid_search.py  query_router.py
findocs/serving/: rag_pipeline.py
findocs/tests/: conftest.py  test_eval_suite.py
finetuning/: config_schema.py  trainer.py
frontend/: package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/components/: AgentActivity.tsx  ChatInput.tsx  ChatMessage.tsx  CitationBadge.tsx  ComplianceReport.tsx  ConfidenceBanner.tsx  Disclaimer.tsx  ResearchSessionPanel.tsx  SuggestedQueries.tsx
frontend/src/lib/: ai-types.ts  research-sessions.ts
frontend/src/types/: index.ts
infrastructure/: .env.example  docker-compose.yml  init.sql
ingestion/: document_processor.py  models.py  pdf_parser.py
ingestion/parsers/: __init__.py  pdf_parser.py  table_extractor.py
ingestion/scrapers/: __init__.py  rbi_scraper.py  sebi_scraper.py
knowledge_graph/: graph_builder.py  graph_retriever.py  legal_ner.py  neo4j_client.py
lexpilot_agents/: __init__.py  compliance_agent.py  contract_agent.py  models.py  orchestrator.py  precedent_agent.py  risk_agent.py
lexpilot_agents/guardrails/: input_guardrails.py  output_guardrails.py
lexpilot_agents/tools/: compliance_tools.py  retrieval_tools.py
monitoring/: langfuse_monitor.py
processing/: bm25_indexer.py  chunker.py  embedder.py
retrieval/: __init__.py  bm25.py  embedder.py  hybrid_search.py  indexer.py  parent_store.py  qdrant_client.py  qdrant_store.py  reranker.py
scripts/: build_bm25_index.py  build_semantic_graph.py  diagnose_graphrag.py  ingest_documents.py  populate_citation_metadata.py
serving/: fallback_chain.py  model_server.py  prompt_registry.py
tests/: test_chunker.py  test_citation_extractor.py  test_parsers.py  test_rag_pipeline.py  test_retrieval.py
