[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "findocs"
version = "0.1.0"
description = "FinDocs – Financial Document Intelligence LLMOps Pipeline for Indian Retail Investors"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # Core
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "structlog>=23.2,<25",
    "httpx>=0.25,<1",
    "asyncio>=3.4",
    # PDF & Parsing
    "PyMuPDF>=1.23,<2",
    "pdfplumber>=0.10,<1",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.0,<6",
    # ML & Embeddings
    "sentence-transformers>=2.3,<4",
    "tiktoken>=0.5,<1",
    "spacy>=3.7,<4",
    "numpy>=1.26,<3",
    # Vector DB & Search
    "qdrant-client>=1.7,<2",
    "rank-bm25>=0.2,<1",
    # LLM & Fine-tuning
    "openai>=1.10,<2",
    "anthropic>=0.18,<1",
    "transformers>=4.38,<5",
    "peft>=0.9,<1",
    "trl>=0.7,<1",
    "bitsandbytes>=0.42,<1",
    "datasets>=2.16,<3",
    "accelerate>=0.26,<1",
    # Evaluation
    "ragas>=0.1,<1",
    # Monitoring & Tracing
    "langfuse>=2.10,<3",
    # API
    "fastapi>=0.109,<1",
    "uvicorn[standard]>=0.27,<1",
    # Database
    "asyncpg>=0.29,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    # Workflow
    "apache-airflow>=2.8,<3",
    # Experiment tracking
    "mlflow>=2.10,<3",
    # CLI
    "click>=8.1,<9",
    # Misc
    "redis>=5.0,<6",
    "rouge-score>=0.1,<1",
    "aiosqlite>=0.19,<1",
    "fpdf2>=2.7,<3",
    "torch>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.1,<6",
    "ruff>=0.2,<1",
    "mypy>=1.8,<2",
    "respx>=0.20,<1",
]

[project.scripts]
findocs-eval = "evaluation.ci_gate:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
