[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lexpilot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Agent framework (OpenAI Agents SDK)
    "openai-agents>=0.1",

    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",

    # Validation & config
    "pydantic>=2.5",
    "pydantic-settings>=2.5",
    "instructor>=1.5",

    # PDF processing
    "PyMuPDF>=1.24",
    "pdfplumber>=0.11",

    # NLP
    "spacy>=3.7",
    "tiktoken>=0.7",
    "transformers>=4.40",
    "torch>=2.2",

    # Embeddings & retrieval
    "sentence-transformers>=3.0",
    "qdrant-client>=1.10",
    "rank-bm25>=0.2.2",

    # Knowledge graph
    "neo4j>=5.20",

    # Infrastructure
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "redis>=5.0",

    # Evaluation
    "ragas>=0.1",
    "datasets>=2.0",
    "langchain-anthropic>=0.1",
    "langchain-community>=0.2",

    # Observability
    "langfuse>=2.0",
    "structlog>=24.0",

    # LLM providers
    "anthropic>=0.30",
    "litellm>=1.40",

    # Utilities
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "lexpilot_agents",
    "api",
    "chunking",
    "citation",
    "compliance",
    "config",
    "core",
    "evaluation",
    "ingestion",
    "knowledge_graph",
    "retrieval",
    "scripts",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]
